Fixed vertical align in grid

--- a/src/assets/styles/base/grid/_grid.scss
+++ b/src/assets/styles/base/grid/_grid.scss
@@ -15,6 +15,7 @@
     display: inline-block;
     padding-left: $grid-gutter + px;
     padding-left: remify($grid-gutter);
+    vertical-align: top;
     width: (100% / 1);
 }
 
